Update to Java15 and refresh dependencies